--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>BROMAG</title>
+    <title>BROMAG INDIA</title>
   </head>
   <body>
     <div id="root"></div>
